# ai-proposal-generator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  evals.yml
data/: products.yaml
docs/: demo-script.md  eval-report.md  interview-prep.md  portfolio-case.md  resume-summary.md
evals/: checks.py  gate.py
evals/golden/: en-office-4.yaml  ru-bathroom-5.yaml  ru-kitchen-1.yaml  ru-renovation-20.yaml  ru-specs-heavy-6.yaml
proposal_gen/: __main__.py  cli.py  config.py  errors.py  generate.py  llm.py  models.py  render.py  template.html
proposal_gen/fonts/: OFL.txt
scripts/: make_example.py  run_evals.py
tests/: conftest.py  test_cli.py  test_config.py  test_errors.py  test_eval_checks.py  test_generate.py  test_llm.py  test_llm_contract.py  test_models.py  test_pipeline.py  test_render.py  test_run_evals_gate.py
tests/fixtures/: llm_response.json
